--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,11 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
+
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
 }
